2008-12-29  Sebastien Pouliot  <sebastien@ximian.com>

	* ReviewSelfAssignmentRule.cs: Fix the check when a call chain
	containing an indexer is used.

2008-12-28  Cedric Vivier  <cedricv@neonux.com>

	* EnsureLocalDisposalRule.cs: New. Rule that checks if locals
	are guaranteed to be disposed of before the method returns.

2008-12-27  Jesse Jones  <jesjones@mindspring.com> 

	* ReviewInconsistentIdentityRule.cs: Added an assert to verify that
	equalityMethods's reserve size is sufficient.

2008-12-23  Cedric Vivier  <cedricv@neonux.com>

	* ProvideCorrectRegexPatternRule.cs: New. Rule that checks if
	methods/constructors are provided a valid regular expression pattern.

2008-12-19  Sebastien Pouliot  <sebastien@ximian.com>

	* CheckParametersNullityInVisibleMethodsRule.cs: Make sure (null ==
	obj) is treated identically to (obj == null). Note: code generated by
	mcs does not produce IL that resulted in false positives.

2008-12-19  Jesse Jones  <jesjones@mindspring.com> 

	* ReviewInconsistentIdentityRule.cs: Added.

2008-12-13  Jesse Jones  <jesjones@mindspring.com> 

	* ReviewUseOfInt64BitsToDoubleRule.cs: Fix AnalyzeModule so that it 
	activates the rule properly when multiple assemblies or modules are 
	being checked.

2008-12-10  Sebastien Pouliot  <sebastien@ximian.com>

	* ProvideCorrectArgumentsToFormattingMethodsRule.cs: Don't check
	the last char of a string for '{' since it's too late to read a digit
	after it.
	[Fix #458175]

2008-12-07  Jesse Jones  <jesjones@mindspring.com>
 
	* DoNotRecurseInEqualityRule.cs, Makefile.am: Added new rule.

2008-12-05  Sebastien Pouliot  <sebastien@ximian.com>

	* AttributeStringLiteralsShouldParseCorrectlyRule.cs: Use 
	HasParameters
	* CheckParametersNullityInVisibleMethodsRule.cs: Use 
	HasParameters

2008-11-30  Sebastien Pouliot  <sebastien@ximian.com>

	* AttributeStringLiteralsShouldParseCorrectlyRule.cs: Use 
	Has{x} methods to avoid creating empty collections in Cecil. Remove 